# iterators-collection

./: Cargo.toml
src/: lib.rs
src/child/: mod.rs
src/core/: mod.rs  tests.rs
src/filter/: mod.rs  tests.rs
src/share/: mod.rs  tests.rs
