[package]
name = "iterators-collection"
version = "0.3.0"
authors = ["Boris DRYKONINGEN <boris.d@orange.fr>"]
edition = "2018"
license-file = "LICENSE"
description = "A set of general purpose iterators useful but not included to the standard library"
repository = "https://github.com/BorisDRYKONINGEN/iterators-collection"

[dependencies]
